--- a/constants/MinionXP.json
+++ b/constants/MinionXP.json
@@ -10,6 +10,7 @@
       "BONE": 0.2,
       "CHILI_PEPPER": 0.0,
       "CRUDE_GABAGOOL": 0.0,
+      "CORRUPTED_FRAGMENT": 0.0,
       "ENCHANTED_BLAZE_POWDER": 48.0,
       "ENCHANTED_BLAZE_ROD": 7680.0,
       "ENCHANTED_BONE": 32.0,
@@ -18,15 +19,18 @@
       "ENCHANTED_GUNPOWDER": 48.0,
       "ENCHANTED_MAGMA_CREAM": 32.0,
       "ENCHANTED_POISONOUS_POTATO": 0.0,
+      "ENCHANTED_ROTTEN_FLESH": 48.0,
       "ENCHANTED_SLIME_BALL": 32.0,
       "ENCHANTED_SLIME_BLOCK": 5120.0,
       "ENCHANTED_SPIDER_EYE": 48.0,
       "ENCHANTED_STRING": 38.0,
+      "ENCHANTED_SULPHUR": 0.0,
+      "ENCHANTED_SULPHUR_CUBE": 0.0,
       "ENDER_PEARL": 0.3,
       "FLAME_DYE": 0.0,
       "GABAGOOL_THE_FISH": 0.0,
       "GHAST_TEAR": 0.5,
-      "GUNPOWDER": 0.3,
+      "SULPHUR": 0.3,
       "HEMOBOMB": 12000.0,
       "HEMOGLASS": 800.0,
       "HEMOVIBE": 5.0,
@@ -39,7 +43,8 @@
       "SLIME_BALL": 0.2,
       "SLIME_BLOCK": 1.8,
       "SPIDER_EYE": 0.3,
-      "STRING": 0.2
+      "STRING": 0.2,
+      "SULPHUR_ORE": 0.0,
     },
     "Farming": {
       "BOX_OF_SEEDS": 2560.0,
@@ -198,7 +203,6 @@
       "ENCHANTED_RED_SAND_CUBE": 5120.0,
       "ENCHANTED_REDSTONE": 32.0,
       "ENCHANTED_REDSTONE_BLOCK": 5120.0,
-      "ENCHANTED_ROTTEN_FLESH": 48.0,
       "ENCHANTED_SAND": 32.0,
       "ENCHANTED_SNOW_BLOCK": 64.0,
       "END_STONE": 0.4,
