I shouldnt do prs at 0:25, mb

--- a/constants/MinionXP.json
+++ b/constants/MinionXP.json
@@ -44,7 +44,7 @@
       "SLIME_BLOCK": 1.8,
       "SPIDER_EYE": 0.3,
       "STRING": 0.2,
-      "SULPHUR_ORE": 0.0,
+      "SULPHUR_ORE": 0.0
     },
     "Farming": {
       "BOX_OF_SEEDS": 2560.0,
