--- a/constants/MinionXP.json
+++ b/constants/MinionXP.json
@@ -227,7 +227,7 @@
       "PACKED_ICE": 4.5,
       "QUARTZ": 0.3,
       "QUARTZ_BLOCK": 1.2,
-      "RED_SAND": 0.2,
+      "SAND-1": 0.2,
       "REDSTONE": 0.2,
       "SAND": 0.2,
       "SNOW_BLOCK": 0.4,
