added more paths

--- a/constants/island_graphs/mineshafts/SAPP1.json
+++ b/constants/island_graphs/mineshafts/SAPP1.json
@@ -106,7 +106,7 @@
     "Position": "-145.0:21.0:-160.0",
     "Name": "Corpse 1",
     "Tags": [
-      "teleport"
+      "poi"
     ],
     "Neighbours": {
       "56": 5.39,
@@ -274,6 +274,7 @@
   "35": {
     "Position": "-160.0:9.0:-195.0",
     "Neighbours": {
+      "91": 4.47,
       "36": 4.47,
       "34": 6.0
     }
@@ -281,6 +282,7 @@
   "36": {
     "Position": "-156.0:9.0:-193.0",
     "Neighbours": {
+      "91": 4.0,
       "35": 4.47,
       "37": 5.0
     }
@@ -667,7 +669,7 @@
   "88": {
     "Position": "-131.0:8.0:-178.0",
     "Neighbours": {
-      "90": 1.41,
+      "90": 2.24,
       "81": 6.4
     }
   },
@@ -679,9 +681,20 @@
     }
   },
   "90": {
-    "Position": "-132.0:7.0:-178.0",
+    "Position": "-133.0:7.0:-178.0",
     "Neighbours": {
-      "89": 3.74
+      "89": 3.61
+    }
+  },
+  "91": {
+    "Position": "-156.0:9.0:-197.0",
+    "Name": "Corpse 4",
+    "Tags": [
+      "poi"
+    ],
+    "Neighbours": {
+      "36": 4.0,
+      "35": 4.47
     }
   }
 }
