--- a/constants/misc/EnforcedConfigValues.json
+++ b/constants/misc/EnforcedConfigValues.json
@@ -1,24 +1,49 @@
 {
-    "enforced_config_values": [
+  "enforced_config_values": [
+    {
+      "chatPSA": [
+        "§cYou have downloaded the very first Skyhanni 1.21 version, it has §lmany many bugs§r§c and you should update right now! https://modrinth.com/mod/skyhanni "
+      ],
+      "notificationPSA": [
+        "§cYou have downloaded the very first Skyhanni 1.21 version!",
+        "§cIt has §lmany many bugs§r§c and you should update right now!",
+        "§chttps://modrinth.com/mod/skyhanni"
+      ],
+      "enforcedValues": [
         {
-            "chatPSA": [
-                "§cYou have downloaded the very first Skyhanni 1.21 version, it has §lmany many bugs§r§c and you should update right now! https://modrinth.com/mod/skyhanni "
-            ],
-            "notificationPSA": [
-                "§cYou have downloaded the very first Skyhanni 1.21 version!",
-                "§cIt has §lmany many bugs§r§c and you should update right now!",
-                "§chttps://modrinth.com/mod/skyhanni"
-            ],
-            "enforcedValues": [
-                {
-                    "path": "gui.customScoreboard.background.useCustomBackgroundImage",
-                    "value": false
-                }
-            ],
-            "affectedVersion": "3.10.0",
-            "affectedMinecraftVersions": [
-                "1.21.5"
-            ]
+          "path": "gui.customScoreboard.background.useCustomBackgroundImage",
+          "value": false
         }
-    ]
+      ],
+      "affectedVersion": "3.10.0",
+      "affectedMinecraftVersions": [
+        "1.21.5"
+      ]
+    },
+    {
+      "enforcedValues": [
+        {
+          "path": "inventory.experimentationTable.addons.preventMisclicks",
+          "value": false
+        }
+      ],
+      "affectedVersion": "4.0.0",
+      "affectedMinecraftVersions": [
+        "1.8.9",
+        "1.21.5"
+      ]
+    },
+    {
+      "enforcedValues": [
+        {
+          "path": "inventory.experimentationTable.superpairs.clickedItemsVisible.enabled",
+          "value": false
+        }
+      ],
+      "affectedVersion": "4.1.0",
+      "affectedMinecraftVersions": [
+        "1.8.9"
+      ]
+    }
+  ]
 }
