--- a/constants/misc/EnforcedConfigValues.json
+++ b/constants/misc/EnforcedConfigValues.json
@@ -44,6 +44,21 @@
       "affectedMinecraftVersions": [
         "1.8.9"
       ]
+    },
+    {
+      "enforcedValues": [
+        {
+          "path": "rift.area.mountaintop.ubikReminder",
+          "value": false
+        }
+      ],
+      "affectedVersion": "4.9.0",
+      "affectedMinecraftVersions": [
+        "1.8.9",
+        "1.21.5",
+        "1.21.7",
+        "1.21.8"
+      ]
     }
   ]
 }
