--- a/constants/misc/EnforcedConfigValues.json
+++ b/constants/misc/EnforcedConfigValues.json
@@ -58,7 +58,8 @@
         "1.21.5",
         "1.21.7",
         "1.21.8"
-      ]
+      ],
+      "extraMessage": "Will be re-enabled next beta"
     }
   ]
 }
