--- a/constants/misc/EnforcedConfigValues.json
+++ b/constants/misc/EnforcedConfigValues.json
@@ -76,6 +76,20 @@
         "1.21.8"
       ],
       "extraMessage": "Will be re-enabled on version 4.17.0 and later"
+    },
+    {
+      "enforcedValues": [
+        {
+          "path": "misc.fixDoubleClicks",
+          "value": false
+        }
+      ],
+      "affectedVersion": "4.24.0",
+      "affectedMinecraftVersions": [
+        "1.21.5",
+        "1.21.7",
+        "1.21.8"
+      ]
     }
   ]
 }
