--- a/constants/misc/EnforcedConfigValues.json
+++ b/constants/misc/EnforcedConfigValues.json
@@ -107,6 +107,21 @@
             "1.21.8",
             "1.21.10"
         ]
+    },
+    {
+        "enforcedValues": [
+            {
+                "path": "dev.debug.alwaysYearOfThePig",
+                "value": true
+            }
+        ],
+        "affectedVersion": "6.0.0",
+        "affectedMinecraftVersions": [
+            "1.8.9",
+            "1.21.5",
+            "1.21.8",
+            "1.21.10"
+        ]
     }
   ]
 }
