--- a/constants/misc/EnforcedConfigValues.json
+++ b/constants/misc/EnforcedConfigValues.json
@@ -142,7 +142,7 @@
     {
       "enforcedValues": [
         {
-          "path": "misc.commands.reversePT.command",
+          "path": "misc.commands.reversePT.clickable",
           "value": false
         }
       ],
